# fdf

./: .gitignore.swp  CMakeLists.txt  Makefile  README.md  fdf
includes/: fdf.h
srcs/: fdf_atoi.c  fdf_center.c  fdf_color.c  fdf_color_gradient.c  fdf_error.c  fdf_init.c  fdf_isometry.c  fdf_keyboard.c  fdf_menu.c  fdf_open_close.c  fdf_plot.c  fdf_plot_line.c  fdf_print_line.c  fdf_print_map.c  fdf_print_net.c  fdf_read.c  fdf_rotate.c  fdf_shift_zoom.c  help_func.c  main.c  matrix_operations.c  plot_line_br.c
test_maps/: 0000  elem.fdf
